// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose snapshot tests > creator preset (ffmpeg + remotion + minio + redis) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
      FFMPEG_SHARED_DIR: /home/node/.openclaw/workspace/media
      MINIO_HOST: minio
      MINIO_PORT: "9000"
      MINIO_ACCESS_KEY: \${MINIO_ROOT_USER}
      MINIO_SECRET_KEY: \${MINIO_SECRET_KEY}
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      REMOTION_HOST: remotion
      REMOTION_PORT: "3000"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
      - ffmpeg-shared:/home/node/.openclaw/workspace/media
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
    depends_on:
      minio:
        condition: service_healthy
      redis:
        condition: service_healthy
  minio:
    image: minio/minio:latest
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: \${MINIO_ROOT_PASSWORD}
    ports:
      - \${MINIO_PORT_0:-9000}:9000
      - \${MINIO_PORT_1:-9001}:9001
    volumes:
      - minio-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - mc ready local || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: server /data --console-address ':9001'
  redis:
    image: redis:7-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    networks:
      - openclaw-network
    entrypoint:
      - node
      - dist/index.js
volumes:
  ffmpeg-shared:
  minio-data:
  redis-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > creator preset (ffmpeg + remotion + minio + redis) 2`] = `
"services:
  ffmpeg:
    image: linuxserver/ffmpeg:latest
    environment:
      PUID: "1000"
      PGID: "1000"
    volumes:
      - ffmpeg-shared:/data
    restart: unless-stopped
    networks:
      - openclaw-network
    command: tail -f /dev/null
    profiles:
      - media
  remotion:
    image: remotion-dev/studio:latest
    ports:
      - \${REMOTION_PORT:-3020}:3000
    restart: unless-stopped
    networks:
      - openclaw-network
    profiles:
      - media
volumes:
  ffmpeg-shared:
"
`;

exports[`compose snapshot tests > devops preset (n8n + postgresql + redis + monitoring) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
      POSTGRES_HOST: postgresql
      POSTGRES_PORT: "5432"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      N8N_HOST: n8n
      N8N_PORT: "5678"
      N8N_WEBHOOK_URL: http://n8n:5678/
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
    depends_on:
      postgresql:
        condition: service_healthy
      redis:
        condition: service_healthy
      n8n:
        condition: service_healthy
  postgresql:
    image: postgres:16-alpine
    environment:
      POSTGRES_USER: openclaw
      POSTGRES_PASSWORD: \${POSTGRES_PASSWORD}
      POSTGRES_DB: openclaw
    ports:
      - \${POSTGRESQL_PORT:-5432}:5432
    volumes:
      - postgres-data:/var/lib/postgresql/data
      - ./postgres/init-databases.sh:/docker-entrypoint-initdb.d/init-databases.sh:ro
    healthcheck:
      test:
        - CMD-SHELL
        - pg_isready -U openclaw
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:7-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  n8n:
    image: docker.n8n.io/n8nio/n8n:latest
    environment:
      N8N_BASIC_AUTH_ACTIVE: "true"
      N8N_BASIC_AUTH_USER: admin
      N8N_BASIC_AUTH_PASSWORD: \${N8N_BASIC_AUTH_PASSWORD}
      DB_TYPE: postgresdb
      DB_POSTGRESDB_HOST: postgresql
      DB_POSTGRESDB_PORT: "5432"
      DB_POSTGRESDB_DATABASE: n8n
      DB_POSTGRESDB_USER: n8n
      DB_POSTGRESDB_PASSWORD: \${DB_POSTGRESDB_PASSWORD}
      N8N_PORT: "5678"
      WEBHOOK_URL: http://n8n:5678/
    ports:
      - \${N8N_PORT:-5678}:5678
    volumes:
      - n8n-data:/home/node/.n8n
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:5678/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      postgresql:
        condition: service_healthy
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    networks:
      - openclaw-network
    entrypoint:
      - node
      - dist/index.js
volumes:
  grafana-data:
  n8n-data:
  postgres-data:
  prometheus-data:
  redis-data:
  uptime-kuma-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > devops preset (n8n + postgresql + redis + monitoring) 2`] = `
"services:
  prometheus:
    image: prom/prometheus:latest
    ports:
      - \${PROMETHEUS_PORT:-9090}:9090
    volumes:
      - prometheus-data:/prometheus
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:9090/-/healthy || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus
    profiles:
      - monitoring
  uptime-kuma:
    image: louislam/uptime-kuma:1
    ports:
      - \${UPTIME_KUMA_PORT:-3001}:3001
    volumes:
      - uptime-kuma-data:/app/data
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:3001 || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
    profiles:
      - monitoring
  grafana:
    image: grafana/grafana:latest
    environment:
      GF_SECURITY_ADMIN_USER: admin
      GF_SECURITY_ADMIN_PASSWORD: \${GF_SECURITY_ADMIN_PASSWORD}
    ports:
      - \${GRAFANA_PORT:-3150}:3000
    volumes:
      - grafana-data:/var/lib/grafana
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:3000/api/health || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      prometheus:
        condition: service_healthy
    profiles:
      - monitoring
volumes:
  grafana-data:
  prometheus-data:
  uptime-kuma-data:
"
`;

exports[`compose snapshot tests > full preset (many services) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
      BROWSERLESS_HOST: browserless
      BROWSERLESS_PORT: "3000"
      BROWSERLESS_TOKEN: \${BROWSERLESS_TOKEN}
      FFMPEG_SHARED_DIR: /home/node/.openclaw/workspace/media
      GOTIFY_HOST: gotify
      GOTIFY_PORT: "8080"
      MEILISEARCH_HOST: meilisearch
      MEILISEARCH_PORT: "7700"
      MEILISEARCH_MASTER_KEY: \${MEILISEARCH_MASTER_KEY}
      MINIO_HOST: minio
      MINIO_PORT: "9000"
      MINIO_ACCESS_KEY: \${MINIO_ROOT_USER}
      MINIO_SECRET_KEY: \${MINIO_SECRET_KEY}
      OLLAMA_HOST: ollama
      OLLAMA_PORT: "11434"
      POSTGRES_HOST: postgresql
      POSTGRES_PORT: "5432"
      QDRANT_HOST: qdrant
      QDRANT_PORT: "6333"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      REMOTION_HOST: remotion
      REMOTION_PORT: "3000"
      SEARXNG_HOST: searxng
      SEARXNG_PORT: "8080"
      WHISPER_HOST: whisper
      WHISPER_PORT: "8000"
      N8N_HOST: n8n
      N8N_PORT: "5678"
      N8N_WEBHOOK_URL: http://n8n:5678/
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
      - ffmpeg-shared:/home/node/.openclaw/workspace/media
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
    depends_on:
      browserless:
        condition: service_healthy
      caddy:
        condition: service_started
      meilisearch:
        condition: service_healthy
      minio:
        condition: service_healthy
      postgresql:
        condition: service_healthy
      qdrant:
        condition: service_healthy
      redis:
        condition: service_healthy
      searxng:
        condition: service_healthy
      n8n:
        condition: service_healthy
  browserless:
    image: browserless/chrome:latest
    environment:
      TOKEN: \${TOKEN}
      MAX_CONCURRENT_SESSIONS: "5"
    ports:
      - \${BROWSERLESS_PORT:-3010}:3000
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:3000/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  caddy:
    image: caddy:2-alpine
    ports:
      - \${CADDY_PORT_0:-80}:80
      - \${CADDY_PORT_1:-443}:443
    volumes:
      - caddy-data:/data
      - caddy-config:/config
    restart: unless-stopped
    networks:
      - openclaw-network
  meilisearch:
    image: getmeili/meilisearch:latest
    environment:
      MEILI_MASTER_KEY: \${MEILI_MASTER_KEY}
    ports:
      - \${MEILISEARCH_PORT:-7700}:7700
    volumes:
      - meilisearch-data:/meili_data
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:7700/health || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  minio:
    image: minio/minio:latest
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: \${MINIO_ROOT_PASSWORD}
    ports:
      - \${MINIO_PORT_0:-9000}:9000
      - \${MINIO_PORT_1:-9001}:9001
    volumes:
      - minio-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - mc ready local || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: server /data --console-address ':9001'
  postgresql:
    image: postgres:16-alpine
    environment:
      POSTGRES_USER: openclaw
      POSTGRES_PASSWORD: \${POSTGRES_PASSWORD}
      POSTGRES_DB: openclaw
    ports:
      - \${POSTGRESQL_PORT:-5432}:5432
    volumes:
      - postgres-data:/var/lib/postgresql/data
      - ./postgres/init-databases.sh:/docker-entrypoint-initdb.d/init-databases.sh:ro
    healthcheck:
      test:
        - CMD-SHELL
        - pg_isready -U openclaw
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
  qdrant:
    image: qdrant/qdrant:v1.12.1
    environment:
      QDRANT__SERVICE__GRPC_PORT: "6334"
    ports:
      - \${QDRANT_PORT:-6333}:6333
    volumes:
      - qdrant-data:/qdrant/storage
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:6333/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:7-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  searxng:
    image: searxng/searxng:latest
    ports:
      - \${SEARXNG_PORT:-8080}:8080
    volumes:
      - searxng-data:/etc/searxng
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:8080/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  n8n:
    image: docker.n8n.io/n8nio/n8n:latest
    environment:
      N8N_BASIC_AUTH_ACTIVE: "true"
      N8N_BASIC_AUTH_USER: admin
      N8N_BASIC_AUTH_PASSWORD: \${N8N_BASIC_AUTH_PASSWORD}
      DB_TYPE: postgresdb
      DB_POSTGRESDB_HOST: postgresql
      DB_POSTGRESDB_PORT: "5432"
      DB_POSTGRESDB_DATABASE: n8n
      DB_POSTGRESDB_USER: n8n
      DB_POSTGRESDB_PASSWORD: \${DB_POSTGRESDB_PASSWORD}
      N8N_PORT: "5678"
      WEBHOOK_URL: http://n8n:5678/
    ports:
      - \${N8N_PORT:-5678}:5678
    volumes:
      - n8n-data:/home/node/.n8n
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:5678/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      postgresql:
        condition: service_healthy
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    networks:
      - openclaw-network
    entrypoint:
      - node
      - dist/index.js
volumes:
  caddy-config:
  caddy-data:
  ffmpeg-shared:
  gotify-data:
  grafana-data:
  meilisearch-data:
  minio-data:
  n8n-data:
  ollama-data:
  postgres-data:
  prometheus-data:
  qdrant-data:
  redis-data:
  searxng-data:
  uptime-kuma-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > minimal preset (redis only) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
    depends_on:
      redis:
        condition: service_healthy
  redis:
    image: redis:7-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    networks:
      - openclaw-network
    entrypoint:
      - node
      - dist/index.js
volumes:
  redis-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > researcher preset (qdrant + searxng + browserless + redis) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
      BROWSERLESS_HOST: browserless
      BROWSERLESS_PORT: "3000"
      BROWSERLESS_TOKEN: \${BROWSERLESS_TOKEN}
      QDRANT_HOST: qdrant
      QDRANT_PORT: "6333"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      SEARXNG_HOST: searxng
      SEARXNG_PORT: "8080"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
    depends_on:
      browserless:
        condition: service_healthy
      qdrant:
        condition: service_healthy
      redis:
        condition: service_healthy
      searxng:
        condition: service_healthy
  browserless:
    image: browserless/chrome:latest
    environment:
      TOKEN: \${TOKEN}
      MAX_CONCURRENT_SESSIONS: "5"
    ports:
      - \${BROWSERLESS_PORT:-3010}:3000
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:3000/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  qdrant:
    image: qdrant/qdrant:v1.12.1
    environment:
      QDRANT__SERVICE__GRPC_PORT: "6334"
    ports:
      - \${QDRANT_PORT:-6333}:6333
    volumes:
      - qdrant-data:/qdrant/storage
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:6333/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:7-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  searxng:
    image: searxng/searxng:latest
    ports:
      - \${SEARXNG_PORT:-8080}:8080
    volumes:
      - searxng-data:/etc/searxng
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:8080/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    networks:
      - openclaw-network
    entrypoint:
      - node
      - dist/index.js
volumes:
  qdrant-data:
  redis-data:
  searxng-data:
networks:
  openclaw-network:
    driver: bridge
"
`;
